--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
             <a href="#" class="button">Belles & durables</a>
           </div>
         </div>
-        <img src="/img/card1.jpeg" alt="img" />
+        <img src="./img/card1.jpeg" alt="img" />
       </div>
       <div class="card">
-        <img src="/img/card2.jpeg" class="card__left-side" alt="img" />
+        <img src="./img/card2.jpeg" class="card__left-side" alt="img" />
         <div class="card__inner-wrapper">
           <div>
             <h3 class="card__title">Expertise optique</h3>
@@ -260,7 +260,7 @@
             <a href="#" class="button">Expertise et simplicité</a>
           </div>
         </div>
-        <img src="/img/card3.jpeg" alt="img" />
+        <img src="./img/card3.jpeg" alt="img" />
       </div>
     </div>
   </div>
@@ -323,7 +323,7 @@
     <div class="footer">
       <div class="footer__cards-container">
         <div class="footer__card">
-          <img src="../img/footerImg1.jpeg" alt="" class="footer__img" />
+          <img src="./img/footerImg1.jpeg" alt="" class="footer__img" />
           <div class="footer__inner-wrapper">
             <p class="footer__card-title">
               Les "Classiques" : disponibles en plusieurs tailles
@@ -332,7 +332,7 @@
           </div>
         </div>
         <div class="footer__card">
-          <img src="../img/footerImg2.jpeg" alt="" class="footer__img" />
+          <img src="./img/footerImg2.jpeg" alt="" class="footer__img" />
           <div class="footer__inner-wrapper">
             <p class="footer__card-title">Rendez-vous Paris 9e</p>
             <a href="" class="button">Rendez-vous Paris 9e</a>
